<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:orientation="vertical"
       android:layout_weight="1">

       <TextView
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/title_activity_single_player"
           android:background="@color/primary_color"
           android:textColor="@color/header_title_color"
           android:padding="@dimen/icon_margin"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="fill_parent"
           android:orientation="horizontal">

           <TextView
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:text="@string/min_title"
               android:background="@color/first_color"
               android:textColor="@color/header_title_color"
               android:layout_weight="1"
               android:gravity="center_horizontal"
               android:paddingTop="@dimen/icon_margin"/>

           <TextView
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:text="@string/max_title"
               android:background="@color/second_color"
               android:textColor="@color/header_title_color"
               android:layout_weight="1"
               android:gravity="center_horizontal"
               android:paddingTop="@dimen/icon_margin"/>

           <TextView
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:text="@string/ave_title"
               android:background="@color/third_color"
               android:textColor="@color/header_title_color"
               android:layout_weight="1"
               android:gravity="center_horizontal"
               android:paddingTop="@dimen/icon_margin"/>

           <TextView
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:text="@string/med_title"
               android:background="@color/forth_color"
               android:textColor="@color/header_title_color"
               android:layout_weight="1"
               android:gravity="center_horizontal"
               android:paddingTop="@dimen/icon_margin"/>

       </LinearLayout>

   </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_gameshow"
            android:background="@color/primary_color"
            android:textColor="@color/header_title_color"
            android:padding="@dimen/icon_margin"/>

    </LinearLayout>

</LinearLayout>
